--- a/YET_CEHR.qmd
+++ b/YET_CEHR.qmd
@@ -99,7 +99,9 @@ FB24_0 <-
   mutate(time = time - min(time)) |> 
   ungroup() |> 
   select(Run, Part, Session, trial, start_time, Rep, Target, target_x, target_y, time, BG, x, y, x_pro, y_pro, visual_angle_x:visual_angle_accuracy)
-  
+
+summary(FB24_0)
+
 FB24_0 |> 
   ggplot(aes(x = time, y = visual_angle_accuracy, col = as.factor(Session))) +
   geom_smooth(se = F) +
@@ -147,6 +149,28 @@ FB24_1 |>
 ```
 
 
+Figure ((XZ)) shows the distribution of angular errors combined (on $\log_{10}$ scale). The median accuracy is 2.8 degree, with a mean of 3.2 degree. 95 percent of all errors are below 8.5 degree. The accuracy is best in the center region with a median of 1.3 - 1.4 degree accuracy. The error increases towards the edges of the screen, but asymmetrically. To the mount side the median error is 2.6 - 3.7 degree, but 5 - 5.5 degrees to the inner side of the eye. In all positions, errors larger than 10 degree were extremely rare. We can conclude that the QuadBright algorithm is able to estimate eye ball positions reasonably accurate and robust under different light conditions. The few catastrophes mostly occurred on three (out of 36) participants, for which the calibration didn't seem to work reliably.
+
+
+```{r}
+T_0 <- 
+  FB24_1 |> 
+  summarize(mean(accuracy), median(accuracy), quantile(accuracy, .95))
+  
+
+FB24_1 |> 
+  filter(accuracy < 20) |> 
+  ggplot(aes(x = accuracy)) +
+#    facet_grid(target_y ~ target_x) +
+  scale_x_log10() +
+  geom_histogram() +
+  geom_vline(aes(xintercept = median(accuracy), col = "median")) +
+  geom_vline(aes(xintercept = mean(accuracy), col = "mean")) +
+  geom_vline(aes(xintercept = quantile(accuracy,.95), col = "95% quant."))
+  
+
+```
+
 
 ```{r fig.width = 12, fig.height = 10}
 
@@ -159,7 +183,7 @@ FB24_1 |>
 
 ```
 
-Figure ((XY)) shows the distribution of angular errors per target position across all trials. Accuracy is best in the center region with a median of 1.3 - 1.4 degree accuracy. The error increases towards the edges of the screen, but asymmetrically. To the mount side the median error is 2.6 - 3.7 degree, but 5 - 5.5 degrees to the inner side of the eye. In all positions, errors larger than 10 degree were extremely rare. We can conclude that the QuadBright algorithm is able to estimate eye ball positions reasonably accurate and robust.
+Figure ((XY)) shows the distribution of angular errors per target position across all trials. Accuracy is best in the center region with a median of 1.3 - 1.4 degree accuracy. The error increases towards the edges of the screen, but asymmetrically. To the mount side the median error is 2.6 - 3.7 degree, but 5 - 5.5 degrees to the inner side of the eye. In all positions, errors larger than 10 degree were extremely rare. We can conclude that the QuadBright algorithm is able to estimate eye ball positions reasonably accurate and robust under different light conditions. The few catastrophes mostly occurred on three (out of 36) participants, for which the calibration didn't seem to work reliably.
 
 
 ### Human performance with Quadbright information
